--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
   "homepage": "https://github.com/truetone/truetone-slider#readme",
   "devDependencies": {
     "jest": "^24.9.0"
+  },
+  "scripts": {
+    "test": "jest"
   }
 }
